Add: creating new servers in future docs

--- a/cse356/milestone.conf
+++ b/cse356/milestone.conf
@@ -12,16 +12,21 @@
         ProxyPreserveHost On
         RewriteEngine On
         ServerName 194.113.75.116
-        ProxyPassMatch "/tiles(.*)" "http://146.190.141.61:8080/tile$1"
-        ProxyPassReverse "/tiles(.*)" "http://146.190.141.61:8080/tile$1"
+        ProxyPassMatch "/tiles(.*)" "http://167.172.239.172/tile$1"
+        ProxyPassReverse "/tiles(.*)" "http://167.172.239.172/tile$1"
         
- 	ProxyPassMatch "/api/search" "http://64.23.254.233:25000"
-        ProxyPassReverse "/api/search" "http://64.23.254.233:25000" 
-        # Proxy both GET and POST requests to /api/route
-    <Location "/api/route">
-#        ProxyPass "http://146.190.141.61:8989/route"
-#        ProxyPassReverse "http://146.190.141.61:8989/route"
-    </Location>       
+ 	    ProxyPassMatch "/api/search" "http://165.227.213.234:25000"
+        ProxyPassReverse "/api/search" "http://165.227.213.234:25000" 
+
+        ProxyPassMatch "/convert" "http://174.138.70.2/convert.php"
+        ProxyPassReverse "/convert" "http://174.138.70.2/convert.php"
+
+        ProxyPassMatch "/turn(.*)" "http://138.197.25.138:25000/turn$1"
+        ProxyPassReverse "/turn(.*)" "http://138.197.25.138:25000/turn$1"
+
+        ProxyPassMatch "/api/address" "http://104.131.173.167:25000"
+        ProxyPassReverse "/api/address" "http://104.131.173.167:25000"
+        # Proxy both GET and POST requests to /api/route      
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
